<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_traffic_light_whole_image_detector</name>
  <version>0.1.0</version>
  <description>Whole-image traffic light detector using CoMLOps regression model (ONNX). Outputs TrafficLightRoiArray.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_cuda_utils</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tier4_perception_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
